# diary

./: Cargo.toml  LICENSE  README.md  bacon.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: check.yml  safety.yml  test.yml
diary/: Cargo.toml
diary_backend/: Cargo.toml
documentation/: C1-1-Main.puml
