[package]
name = "diary_backend"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
diary = {  path="../diary", version = "0.1.0" }
axum = "0.8.9"
diesel = { version="2.3.8", features = ["postgres"] }
diesel-async = { version="0.8.0", features = ["postgres", "bb8"] }
bb8 = "0.8.6"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.52.1"
tracing = "0.1.44"
